// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header matches snapshot when logged in 1`] = `
<div
  className="search-bar-visible"
>
  <header
    className="usa-header usa-header-extended tm-header"
    role="banner"
  >
    <Connect(Component) />
    <GovBanner />
    <div
      className="usa-navbar"
    >
      <button
        className="usa-menu-btn"
      >
        Menu
      </button>
      <div
        className="usa-logo"
        id="logo"
      >
        <div
          className="usa-logo-text"
        >
          <Link
            replace={false}
            to="/"
          >
            <img
              alt="TalentMAP logo"
              src="/assets/logos/png/horizontal_color_thin.png"
            />
          </Link>
        </div>
      </div>
      <DesktopNav
        isLoggedIn={true}
        logout={[Function]}
        shouldShowSearchBar={true}
        toggleSearchVisibility={[Function]}
        userProfile={
          Object {
            "user": Object {
              "username": "test",
            },
          }
        }
      />
    </div>
    <MobileNav
      logout={[Function]}
      showLogin={false}
      user="test"
    />
    <div
      className="usa-overlay"
    />
  </header>
</div>
`;

exports[`Header matches snapshot when logged out 1`] = `
<div
  className="search-bar-visible"
>
  <header
    className="usa-header usa-header-extended tm-header"
    role="banner"
  >
    <Connect(Component) />
    <GovBanner />
    <div
      className="usa-navbar"
    >
      <button
        className="usa-menu-btn"
      >
        Menu
      </button>
      <div
        className="usa-logo"
        id="logo"
      >
        <div
          className="usa-logo-text"
        >
          <Link
            replace={false}
            to="/"
          >
            <img
              alt="TalentMAP logo"
              src="/assets/logos/png/horizontal_color_thin.png"
            />
          </Link>
        </div>
      </div>
      <DesktopNav
        isLoggedIn={false}
        logout={[Function]}
        shouldShowSearchBar={true}
        toggleSearchVisibility={[Function]}
        userProfile={Object {}}
      />
    </div>
    <MobileNav
      logout={[Function]}
      showLogin={true}
      user={null}
    />
    <div
      className="usa-overlay"
    />
  </header>
</div>
`;
